--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8083
+spring.application.name=order-service
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.main.allow-bean-definition-overriding=true
